Fix compilation warnings
* suppress deprecation warnings because we cannot fix them right now or with the currrent implementation
* use the static method valueOf instead of the constructors of the wrapped primitive types (Java9)
* replace type.newInstance() with the recommended version (Java9)